--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "framer-motion": "^12.4.7",
     "lucide": "^0.475.0",
     "lucide-react": "^0.475.0",
-    "next": "15.1.7",
+    "next": "^15.2.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-scroll": "^1.9.3",
-    "sweetalert2": "^11.17.2",
+    "sweetalert2": "^11.6.13",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
